# Gyra

./: Cargo.toml
.cargo/: config.toml
.zed/: tasks.json
crates/gyra-codec/: Cargo.toml
crates/gyra-codec/src/: coding.rs  error.rs  lib.rs  nibble.rs  packet.rs  variadic_int.rs
crates/gyra-macros/: Cargo.toml
crates/gyra-macros/src/: lib.rs
crates/gyra-proto/: Cargo.toml
crates/gyra-proto/src/: chunk.rs  distance.rs  lib.rs  network.rs  smp.rs
crates/gyra-proto/src/login/: disconnect.rs  login_start.rs  mod.rs  set_compression.rs
crates/gyra-proto/src/play/: chat_message.rs  chunk_data.rs  disconnect.rs  entities.rs  join_game.rs  keep_alive.rs  map_chunk_bulk.rs  mod.rs  movement.rs  sync_packets.rs
crates/gyra-proto/src/status/: mod.rs
src/: error.rs  main.rs  message.rs  state.rs
src/components/: mod.rs
src/net/: mod.rs  packet.rs  query.rs  resolvers.rs
src/plugin/: connecting.rs  cursor.rs  lobby.rs  mod.rs  settings.rs
src/plugin/consts/: mod.rs
src/plugin/network/: mod.rs  transport.rs
src/plugin/play/: block_builder.rs  chat.rs  chat_proto.rs  chunk_builder.rs  chunk_cons.rs  debug_screen.rs  mod.rs  player.rs  world.rs
src/proto/: handshake.rs  mod.rs  ping_pong.rs  status_request.rs  status_response.rs
src/proto/login/: login_start.rs  login_success.rs  mod.rs
src/proto/play/: chat_message.rs  disconnect.rs  entities.rs  join_game.rs  keep_alive.rs  mod.rs
src/resources/: mod.rs
