[package]
name = "gyra"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "^0.14", features = ["wayland"] }
bevy_cosmic_edit = { version = "0.23.0", features = ["multicam"] }
block-mesh = "0.2.0"
crossbeam-channel = "0.5.13"
directories = "5.0.1"
flate2 = { version = "1.0.33", default-features = false, features = ["zlib-ng"] }
gyra-codec = { version = "0.1.0", path = "crates/gyra-codec" }
gyra-macros = { version = "0.1.0", path = "crates/gyra-macros" }
gyra-proto = { version = "0.1.0", path = "crates/gyra-proto" }
hickory-resolver = { version = "0.24.1", default-features = false, features = [
    "tokio-runtime",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sysinfo = "0.32.0"
thiserror = "1.0.63"
toml = "0.8.19"

[workspace]
members = ["crates/gyra-codec", "crates/gyra-macros", "crates/gyra-proto"]
